--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:name="classes.ReimApplication" 
+        android:name="classes.utils.ReimApplication"
         android:theme="@style/AppTheme" >
         
         <activity android:name="com.rushucloud.reim.start.SplashActivity"
