--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ android {
         applicationId "com.rushucloud.reim"
         minSdkVersion 14
         targetSdkVersion 21
+        versionCode 1
+        versionName "0.7"
     }
 
     buildTypes {
@@ -65,4 +67,5 @@ dependencies {
     compile files('libs/umeng-analytics-v5.4.1.jar')
     compile files('libs/umeng_social_sdk.jar')
     compile files('libs/universal-image-loader-1.9.0.jar')
+    compile files('libs/pinyin4j-2.5.0.jar')
 }
